# ldjam53

./: .gitmodules  CMakeLists.txt
assets/: deliverman.aseprite  letter.aseprite  prologue.kra
assets/package/: level1.gltf  longpackage.mtl  package.aseprite  package.blend  package.blend1  package2.aseprite  slot.mtl
assets/package64/: character.ase  package64.aseprite  package64.png~
assets/player/: dragontrooper.aseprite  player.aseprite
include/: aadirection.h  app.h  assetfactory.h  component.h  goptions.h  level.h  mathematics.h  pipeline.h  playercontrol.h  rotationgraph.h  sprite.h
shaders/: bend.geom  bend.vert  cubemap.frag  instance.vert  normal.frag  object.frag  object.vert  sprite.frag
src/: app-level1.cpp  app.cpp  assetfactory.cpp  goptions.cpp  level.cpp  main.cpp  pipeline.cpp  playercontrol.cpp  rotationgraph.cpp  sprite.cpp
test/rotationgraph/: CMakeLists.txt  testrotationgraph.cpp
